# zkplex-core

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.cli  Dockerfile.play  Makefile  README.md  package.json  test_base85_chars.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_SHARED.md  CLI.md  DESIGN_PHILOSOPHY.md  DEVELOPMENT.md  DOCKER.md  QUICKSTART.md  WASM_API.md
docs/zircon/: BEST_PRACTICES.md  CIRCUIT.md  ENCODING.md  EXAMPLES.md  OPERATORS.md  OVERVIEW.md  PREPROCESSING.md  SIGNALS.md  SYNTAX.md  TOOLS.md
examples/: README.md  age_verification.sh  preprocessing.sh  run_all.sh  threshold_check.sh  zircon_format.sh
play/: .dockerignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
play/src/: App.tsx  index.css  main.tsx
play/src/components/: CircuitGraph.tsx  ProofCreator.tsx  ProofSuccessModal.tsx  ProofVerifier.tsx
play/src/components/ui/: alert.tsx  button.tsx  card.tsx  checkbox.tsx  select-old.tsx  select.tsx
play/src/contexts/: ZKPlexContext.tsx
play/src/hooks/: useZKPlex.ts
play/src/utils/: circuitParser.ts
src/: circuit.pest  layout.rs  lib.rs
src/api/: core.rs  layout.rs  mod.rs  program.rs  prove_helpers.rs  types.rs
src/circuit/: builder.rs  estimator.rs  mod.rs  strategy.rs
src/encoding/: mod.rs  value.rs
src/parser/: ast.rs  circuit.rs  mod.rs
src/preprocess/: formatter.rs  hasher.rs  mod.rs
src/wasm/: bindings.rs  mod.rs
